<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:textSize="32sp" android:gravity="center" android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    <TextView
            style="@style/form_label"
            android:text="@string/label_weight"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/inputWeight"
            android:hint="@string/hint_weight"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="4dp"/>

    <TextView
            style="@style/form_label"
            android:text="@string/label_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/inputWeight"
            app:layout_constraintEnd_toEndOf="@+id/inputWeight"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/inputWeight"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/hint_height"
            android:id="@+id/inputHeight"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="4dp"/>

    <TextView
            style="@style/form_label"
            android:text="@string/label_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/inputHeight"
            app:layout_constraintEnd_toEndOf="@+id/inputHeight" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/inputHeight"/>
    <Spinner
            android:entries="@array/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spGenre" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="4dp"/>
    <Button
            android:text="@string/label_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnCalculate"
            app:layout_constraintStart_toStartOf="@+id/spGenre" app:layout_constraintEnd_toEndOf="@+id/spGenre"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/spGenre"/>
    <Button
            android:text="@string/label_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnClear" app:layout_constraintEnd_toEndOf="@+id/btnCalculate"
            app:layout_constraintStart_toStartOf="@+id/btnCalculate" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalculate"/>
</androidx.constraintlayout.widget.ConstraintLayout>