<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activities.ResultActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/masc_ideal"
            android:id="@+id/ivIMCStatus" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvIMCMsg" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" app:layout_constraintVertical_bias="0.469"/>
    <TextView
            android:text="@string/label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.517" android:textSize="32sp"
            android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIMCMsg"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/hint_rs_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvIMC"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="76sp" android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivIMCStatus"
            app:layout_constraintTop_toTopOf="@+id/ivIMCStatus" app:layout_constraintVertical_bias="0.35"/>
    <TextView
            android:text="@string/hint_rs_ideal_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvIMCStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvIMC" android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivIMCStatus"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp" android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>